--- a/text/intro.tex
+++ b/text/intro.tex
@@ -1,8 +1,7 @@
 Obecna na całym świecie pandemia postawiła wykładowców oraz studentów przed dużym wyzwaniem -- jak
 przeprowadzić zajęcia laboratoryjne~w~momencie, gdy edukacja odbywa się zdalnie i~student nie może
 pojawić się na uczelni.
-
-W tej sytuacji bardzo przydatne okazują się narzędzia pozwalające na symulowanie ćwiczeń, które
+~W~tej sytuacji bardzo przydatne okazują się narzędzia pozwalające na symulowanie ćwiczeń, które
 byłby wykonywane stacjonarnie~w~laboratorium na uczelni. Jednakże~z~uwagi na to, że
 problem pojawił się niedawno, nie ma zbyt wielu dostępnych rozwiązań.
 
@@ -11,7 +10,7 @@ wykonywania teoretycznej wersji ćwiczeń~z~laboratorium Przetworników Pomiarow
 dostępne są zadania dla każdego~z~sensorów, do wykonania przez studenta. Każdy~z~sensorów posiada
 możliwość wybrania jego konfiguracji (materiał~z~jakiego jest on wykonany, etc.). Ćwiczenia
 wyposażone są~w~generowane losowo (w pewnym zakresie, aby jak najlepiej odzwierciedlić zachowanie
-konkretnego sensora) zestawy danych do obliczeń. Dodatkowo każde z nich posiada skrypty sprawdzające
+konkretnego sensora) zestawy danych do obliczeń. Dodatkowo każde~z~nich posiada skrypty sprawdzające
 czy obliczona~i~wpisana wartość (odpowiedź) jest poprawna. Po wykonaniu wszystkich zadań
 udostępniana jest możliwość zobaczenia,~a~także zapisania na komputerze użytkownika, charakterystyki
 dla danego sensora, która związana jest~z~wykonywanym ćwiczeniem.
