--- a/text/sensor-theory/sensor-theory.tex
+++ b/text/sensor-theory/sensor-theory.tex
@@ -30,6 +30,7 @@ znajduje.
 \subsection{Termorezystory metalowe (RTD)}
 \input{text/sensor-theory/rtd}
 
+\FloatBarrier
 \subsection{Termoogniwa}
 \input{text/sensor-theory/thermocouple}
 
@@ -52,11 +53,11 @@ ultradźwiękowych metod pomiarowych.
 \input{text/sensor-theory/lvdt}
 
 % Sensory naprężenia - Strain gauge
-\section{Sensory naprężenia}\label{sect:theory-strain}
-Czujniki naprężenia operują~w~oparciu~o~zjawisko zmiany rezystancji materiału,~z~którego sensor
-jest wykonany, pod wpływem naprężeń mechanicznych. Zmiana rezystancji spowodowana jest odkształcaniem
-się elementu, do którego przytwierdzony jest przetwornik tensometryczny. Podstawową funkcję
-przetwarzania tensometrów opisuje równanie \cite{hoffman1989, milek2006}:
+\section{Sensory naprężenia}\label{sect:theory-strain} Czujniki tensometryczne
+operują~w~oparciu~o~zjawisko zmiany rezystancji materiału,~z~którego sensor jest wykonany, pod
+wpływem naprężeń mechanicznych. Zmiana rezystancji spowodowana jest odkształcaniem się elementu, do
+którego przytwierdzony jest przetwornik tensometryczny. Podstawową funkcję przetwarzania tensometrów
+opisuje równanie \cite{hoffman1989, milek2006}:
 
 \begin{equation}
   \frac{dR}{R}=\varepsilon\cdot(1+2\nu)+\frac{d\varrho}{\varrho}
