--- a/config.tex
+++ b/config.tex
@@ -4,7 +4,7 @@
 \title{Aplikacja internetowa wspomagająca wykonanie ćwiczeń\\ w laboratorium Przetworników Pomiarowych}
 \engtitle{Web application supporting the implementation of exercises in the laboratory}
 \album{290988}
-\author{inż. Mikołaj Rosiński}
+\author{Mikołaj Rosiński}
 \promotor{dr inż. Bogdan Dziadak}
 \date{2022}
 
