final final touches

--- a/text/app/app.tex
+++ b/text/app/app.tex
@@ -29,15 +29,16 @@ internetowej \cite{ts-main}.
 
 Niniejszy rozdział ma na celu:
 \begin{itemize}
-  \item[--] przedstawienie jak zbudowane zostały główne elementy interfejsu użytkownika,
-  \item[--] pokazanie jak odbywa się konfiguracja elementów aplikacji oraz zarządzanie stanem
-        komponentów,
-  \item[--] zaprezentowanie, że kod odpowiedzialny za generowanie danych oraz weryfikację ich
-        jest zaimplementowany na podstawie teorii przetworników pomiarowych.
+      \item[--] przedstawienie jak zbudowane zostały główne elementy interfejsu użytkownika,
+      \item[--] pokazanie jak odbywa się konfiguracja elementów aplikacji oraz zarządzanie stanem
+            komponentów,
+      \item[--] zaprezentowanie, że kod odpowiedzialny za generowanie danych oraz weryfikację ich
+            jest zaimplementowany na podstawie teorii przetworników pomiarowych.
 \end{itemize}
 
 \section{Implementacja interfejsu użytkownika}\label{sect:ui}
 \input{text/app/ui}
+\FloatBarrier
 
 \section{Przekazywanie danych pomiędzy komponentami}\label{sect:context}
 \input{text/app/context}
