--- a/text/app/laboratory.tex
+++ b/text/app/laboratory.tex
@@ -32,11 +32,10 @@ informacji, które mają być wyświetlone użytkownikowi~w~oknie dialogowym~z~t
   populowaniem okna dialogowego teorii odpowiednimi wzorami~i~tabelami na podstawie plików
   konfiguracyjnych}
 
-Komponent każdego ćwiczenia laboratoryjnego wykorzystuje zaimplementowane hooki --
-\colortt{useFormInput, useFormValidation, useCompleteTask, useSingleLineChartData} do zarządzania
+Komponent każdego ćwiczenia laboratoryjnego wykorzystuje dodane funkcje (hooki) do zarządzania
 stanem, który wykorzystywany jest przez odpowiednie komponenty budujące interfejs użytkownika.
-
 Poniżej przedstawione są zadania, które wykonują zaimplementowane hooki:
+
 \begin{itemize}
   \item [--] \colortt{useFormInput} przyjmuje wartości wpisywane~w~pole odpowiedzi do zadania, w
         razie potrzeby ustawia odpowiednie flagi związane~z~porównaniem do poprawnej wartości,
