--- a/text/sensor-theory/dynamic-temperature.tex
+++ b/text/sensor-theory/dynamic-temperature.tex
@@ -1,6 +1,6 @@
 Charakterystyki dynamiczne sensorów temperatury wyznacza się na podstawie ich stałej czasowej.
 Wartość tę określa czas, jakiego sensor potrzebuje, aby jego odpowiedź dynamiczna osiągnęła 63.2\%
-stabilizacji po gwałtownej zmianie temperatury jego otoczenia. Przykładową odpowiedź
+stabilizacji po skokowej zmianie temperatury jego otoczenia. Przykładową odpowiedź
 skokową~z~widoczną charakterystyką dynamiczą przedstawia rysunek \ref{img:dynamic-characteristic}
 \cite{gawedzki2010}. Stałą czasową sensorów termorezystancyjnych oraz termoelektrycznych można
 wyznaczyć korzystając~z~zależności:
