--- a/text/sensor-theory/sensor-theory.tex
+++ b/text/sensor-theory/sensor-theory.tex
@@ -52,6 +52,7 @@ ultradźwiękowych metod pomiarowych.
 \subsection{LVDT - Transformatorowe czujniki przemieszczeń liniowych}
 \input{text/sensor-theory/lvdt}
 
+\FloatBarrier
 % Sensory naprężenia - Strain gauge
 \section{Sensory naprężenia}\label{sect:theory-strain} Czujniki tensometryczne
 operują~w~oparciu~o~zjawisko zmiany rezystancji materiału,~z~którego sensor jest wykonany, pod
