--- a/text/sensor-theory/temperature-comparison.tex
+++ b/text/sensor-theory/temperature-comparison.tex
@@ -17,7 +17,7 @@ ich zalet i wad.
     Dokładność                         & Wysoka          & Średnia            \\
     Wytrzymałość mechaniczna           & Dobra           & Znakomita          \\
     Podatność na efekt samoogrzewania? & Tak, nieznaczna & Nie                \\
-    Koszt sensora                      & Wysoki          & Bardzo niski       \\
+    Koszt sensora                      & Wysoki          & Niski              \\
     \bottomrule
   \end{tabular}
 \end{table}
@@ -27,15 +27,16 @@ ich zalet i wad.
   \caption{\label{tab:thermocouple-pros-cons}Zalety i wady obu rodzajów przetworników}
   \begin{tabular}{p{0.5cm}|c|c}
     \toprule
-                                                                       & Termorezystory                        & Termoogniwa                              \\
+                                                                       & Termorezystory                        & Termoogniwa                                \\
     \midrule
-    \parbox[t]{2mm}{\multirow{3}{*}{\rotatebox[origin=c]{90}{Zalety}}} & Najbardziej stabilny typ sensora      & Prosta budowa, tanie w wykonaniu         \\
-                                                                       & Liniowe charakterystyki przetwarzania & Nie wymagają zewnętrznego zasilania      \\
-                                                                       & Najdokładniejsze pomiary              & Szeroki zakres temperatur                \\
+    \parbox[t]{2mm}{\multirow{3}{*}{\rotatebox[origin=c]{90}{Zalety}}} & Najbardziej stabilny typ sensora      & Prosta budowa, tanie w wykonaniu           \\
+                                                                       & Liniowe charakterystyki przetwarzania & Nie wymagają zewnętrznego zasilania        \\
+                                                                       & Najdokładniejsze pomiary              & Szeroki zakres temperatur                  \\
     \midrule
-    \parbox[t]{2mm}{\multirow{3}{*}{\rotatebox[origin=c]{90}{Wady}}}   & Wymagają zewnętznego zasilania        & Nieliniowa charakterystyka przetwarzania \\
-                                                                       & Niewielkie zmiany rezystancji         & Niskie napięcie wyjściowe                \\
-                                                                       & Podatne na efekt samoogrzewania       & Mało stabilne pomiary                    \\
+    \parbox[t]{2mm}{\multirow{4}{*}{\rotatebox[origin=c]{90}{Wady}}}   & Wymagają zewnętznego zasilania        & Nieliniowa charakterystyka przetwarzania   \\
+                                                                       & Niewielkie zmiany rezystancji         & Niskie napięcie wyjściowe                  \\
+                                                                       & Podatne na efekt samoogrzewania       & Mało stabilne pomiary                      \\
+                                                                       &                                       & Wymagana znajomość temperatury odniesienia \\
     \bottomrule
   \end{tabular}
 \end{table}
