--- a/text/sensor-theory/thermocouple.tex
+++ b/text/sensor-theory/thermocouple.tex
@@ -24,7 +24,9 @@ pojawiłby się tutaj żaden błąd pomiarowy, ponieważ przy takim połączniu 
 trzeciego metalu'' -- dodatkowe siły termoelektryczne redukują się. Mimo to~w~układach
 pomiarowych~z~termoogniwami stosuje się specjalne przewody kompensacyjne, które wykonane
 są~z~takiego samego materiału jak przetwornik lub~z~materiałów~o~takich samych własnościach
-termoelektrycznych.
+termoelektrycznych. W celu zapewnienia dokładności pomiarowej ważne jest zapewnienie tej samej
+temperatury odniesienia na obu końcach ,,zimnej'' strony układu pomiarowego. Dlatego punkt ten
+umieszcza się w środowisku izolowanym termicznie, gdzie znana jest wartość temperatury.
 
 \addimage{0.6}{sensor-theory/thermocouple}{\label{img:thermocouple}Schemat
   układu do pomiarów termoogniwami}
@@ -58,4 +60,4 @@ Wartości współczynnika Seebecka podane~w~tabeli \ref{tab:thermocouple} są wa
 dla temperatury odniesienia 273.15K (0\degC). Aplikacja wykorzystuje takie wartości, ponieważ tylko
 symuluje realne przetworniki. Przy normalnych pomiarach nie możnaby przyjąć stałej wartości, gdyż
 jest ona zależna od temperatury otoczenia (wartości współczynnika nie będą stałe~w~całym zakresie
-pomiarowym danego termoogniwa) oraz innych parametrów samego czujnika.
+pomiarowym danego termoogniwa).
