--- a/text/sensor-theory/lvdt.tex
+++ b/text/sensor-theory/lvdt.tex
@@ -14,10 +14,10 @@ rysunku~\ref{img:lvdt}.
 
 Uzwojenie pierwotne zasilane jest napięciem przemiennym.~W~uzwojeniach wtórych (oznaczone jako Ns na
 schemacie) indukują się napięcia, które zależne są od położenia rdzenia wewnątrz obudowy. Gdy rdzeń
-znajduje się~w~równej odległości od obu cewek wtórnych -- napięcia będą sobie równe. Ponieważ układ
-sensora LVDT jest zbudowany na podstawie transformatora różnicowego, to napięcie na wyjściu całego
-układu będzie równe różnicy napięć na cewkach wtórnych. Zależność tę opisuje wzór
-\cite{sensory_wykład}:
+znajduje się~w~równej odległości od obu cewek wtórnych (w punkcie centralnym układu) -- napięcia
+będą sobie równe. Ponieważ układ sensora LVDT jest zbudowany na podstawie transformatora
+różnicowego, to napięcie na wyjściu całego układu będzie równe różnicy napięć na cewkach wtórnych.
+Zależność tę opisuje wzór \cite{sensory_wykład}:
 
 \begin{equation}
   u_{wy}=u_1-u_2=U_1 \sin{(\omega t + \varphi_1)} - U_2 \sin{(\omega t + \varphi_2)}
@@ -68,9 +68,13 @@ równianiem:
 
 Jeżeli napięcie wejściowe oraz wyjściowe będą w fazie, to kąt przesunięcia fazowego będzie
 równy~0$^\circ$. Cosinus będzie wtedy równy 1. Natomiast w przeciwnej sytuacji (sygnały w
-przeciwfazie), kąt $\varphi$ będzie równy 180$^\circ$, a cosinus będzie równy -1. Stosując
-przetwornik fazoczuły przedstawiona powyżej charakterystyka przetwornika przyjmie postać
-przedstawioną na rysunku \ref{img:transfer-lvdt-full}.
+przeciwfazie), kąt $\varphi$ będzie równy 180$^\circ$, a cosinus będzie równy -1. Wykres
+charakterystyki fazowej przedstawiony został na rysunku \ref{img:transfer-lvdt-phase}. Stosując
+przetwornik fazoczuły przedstawiona na rysunku \ref{img:transfer-lvdt} charakterystyka przetwarzania
+przetwornika przyjmie postać przedstawioną na rysunku \ref{img:transfer-lvdt-full}.
+
+\addimage{0.9}{sensor-theory/transfer-lvdt-phase}{\label{img:transfer-lvdt-phase}Charakterystyka
+  fazowa sensora LVDT w zależności od przesunięcia}
 
 \addimage{0.9}{sensor-theory/transfer-lvdt-full}{\label{img:transfer-lvdt-full}Charakterystyka
   przetwarzania sensora LVDT po zastosowaniu przetwornika fazoczułego}
