--- a/text/summary.tex
+++ b/text/summary.tex
@@ -20,9 +20,10 @@ użytkownika wykorzystano bibliotekę \textit{Chakra UI} udostępniającą wiele
 komponentów,~a~także dwie dodatkowe biblioteki -- \textit{React Latex} do wyświetlania wzorów
 teoretycznych oraz \textit{Recharts} do generowania~i~wykreślania charakterystyk.
 
-Aplikacja posiada interaktywny interfejs, który aktualizuje się~w~raz~z~działaniami prowadzonymi
+Aplikacja posiada interaktywny interfejs, który aktualizuje się wraz~z~działaniami prowadzonymi
 przez użytkownika aplikacji. Całość interfejsu jest~w~j.~angielskim, co pozwala na wykorzystywanie
-narzędzia nie tylko przez użytkowników~z~Polski. Wszystkie zaimplementowane funkcje -- generowanie
+narzędzia przez każdego użytkownika znającego ten język -- wszystkich studentów mających
+zajęcia~w~laboratorium Przetworników Pomiarowych. Wszystkie zaimplementowane funkcje -- generowanie
 danych, weryfikacja poprawności wpisywanych odpowiedzi, generowanie wykresów działają prawidłowo.
 Zostało to wykazane na podstawie przeprowadzonych testów.
 
